[package]
name = "fluidex-common"
version = "0.1.0"
authors = ["HAOYUatHZ <haoyu@protonmail.com>", "lightsing <light.tsing@gmail.com>"]
edition = "2018"

[dependencies]
babyjubjub-rs = { git = "https://github.com/Fluidex/babyjubjub-rs" }
ff = { git = "https://github.com/Fluidex/ff", package = "ff_ce" }
fnv = "1.0"
futures = "0.3"
hex = "0.4"
log = "0.4"
num-bigint = "0.4"
num-traits = "0.2"
once_cell = "1.8"
poseidon-rs = { git = "https://github.com/Fluidex/poseidon-rs" }
rdkafka = { version = "0.26", features = ["cmake-build"], optional = true }
rust_decimal = "1.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
thiserror = "1.0"

[features]
default = ["ff-default", "num-bigint-default", "rust-decimal-default"]
ff-default = ["ff/derive"]
num-bigint-default = ["num-bigint/rand"]
rust-decimal-default = ["rust_decimal/maths", "rust_decimal/serde_json", "serde_json"]
kafka = ["rdkafka"]
rdkafka-dynamic = ["rdkafka/dynamic_linking"]
