[package]
name = "fluidex-common"
version = "0.1.0"
authors = [ "HAOYUatHZ <haoyu@protonmail.com>", "lightsing <light.tsing@gmail.com>" ]
edition = "2018"

[dependencies]
anyhow = "1.0"
babyjubjub-rs = { git = "https://github.com/fluidex/babyjubjub-rs" }
backtrace = { version = "0.3", optional = true }
cfg-if = "1.0"
chrono = { version = "0.4.19", features = [ "serde" ] }
ethers = { git = "https://github.com/gakonst/ethers-rs", optional = true }
ff = { git = "https://github.com/fluidex/ff", package = "ff_ce" }
fnv = "1.0"
futures = "0.3"
hex = "0.4"
log = "0.4"
num-bigint = "0.4"
num-traits = "0.2"
once_cell = "1.8"
poseidon-rs = { git = "https://github.com/fluidex/poseidon-rs" }
rdkafka = { version = "0.26", features = [ "cmake-build" ], optional = true }
rust_decimal = "1.14"
rust_decimal_macros = { version = "1.14", features = [ "reexportable" ] }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = { version = "1.0", optional = true }
sha2 = { version = "0.9.8", optional = true }
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "postgres", "chrono", "decimal" ], optional = true }
tracing = { version = "0.1", optional = true }
tracing-appender = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.2", optional = true }

thiserror = "1.0"

[dev-dependencies]
criterion = "0.3"
rand = "0.8.4"

[features]
default = [ "ff-default", "num-bigint-default", "rust-decimal-default" ]
db = [ "serde_json", "sqlx" ]
ff-default = [ "ff/derive" ]
kafka = [ "rdkafka" ]
l2-account = [ "ethers", "sha2" ]
non-blocking-tracing = [ "backtrace", "tracing", "tracing-appender", "tracing-subscriber" ]
num-bigint-default = [ "num-bigint/rand" ]
rdkafka-dynamic = [ "rdkafka/dynamic_linking" ]
rollup-state-db = [ "db" ]
rust-decimal-default = [ "rust_decimal/maths", "rust_decimal/serde_json", "serde_json" ]
rust-decimal-dingir-exchange = [ "rust_decimal/postgres", "rust_decimal/bytes", "rust_decimal/byteorder" ]
unit-test = [ "kafka", "rollup-state-db", "rust-decimal-dingir-exchange", "non-blocking-tracing" ]

[[bench]]
name = "merge_iterator_bench"
harness = false
